# Voronoi-Generator

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  poetry-update.yml  pre-commit-autoupdate.yml  scan-dependencies.yml
example_configs/: demo_1.yaml  demo_2.yaml
voronoi_generator/: __init__.py  colouring_solver.py  main.py  settings.py
voronoi_generator/colour_lists/: css_colour_list.yaml
